--- a/src/com/serb/sortingdemo/resources/SortingDemoView.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoView.properties
@@ -34,3 +34,6 @@ doSort.Action.shortDescription=
 doSort.Action.text=
 buttonSort.toolTipText=Sort
 buttonSort.text=Sort
+Main.text=Sorting
+sortMenuItem.text=Sort
+loadFromFileMenuItem.text=Load from file
