File loading added draft version

--- a/src/com/serb/sortingdemo/resources/SortingDemoView.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoView.properties
@@ -37,3 +37,12 @@ buttonSort.text=Sort
 Main.text=Sorting
 sortMenuItem.text=Sort
 loadFromFileMenuItem.text=Load from file
+loadFromFile.Action.shortDescription=
+loadFromFile.Action.text=
+# The FileChooser uses this string to identify files with a
+# ".txt" extension.
+txtFileExtensionDescription = Text Files
+
+openFileChooser.dialogTitle = Open a Text File
+saveFileChooser.dialogTitle = Save a Text File
+fileToLoadSeparator = ,
