--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
-application.desc=A simple java desktop application based on Swing Application Framework
+application.desc=A simple java desktop application based on \nSwing Application Framework
 application.homepage=http://appframework.dev.java.net
-application.title=Basic Application Example
-application.vendor=Sun Microsystems Inc.
+application.title=Sorting Application Example
+application.vendor=
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
