--- a/src/com/serb/sortingdemo/resources/SortingDemoApp.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoApp.properties
@@ -1,11 +1,11 @@
 # Application global resources
 
 Application.name = SortingDemo
-Application.title = Basic Application Example
+Application.title = Sorting Application Example
 Application.version = 1.0
-Application.vendor = Sun Microsystems Inc.
+Application.vendor =
 Application.homepage = http\://appframework.dev.java.net/
-Application.description = A simple Java desktop application based on Swing Application Framework.
+Application.description = A simple java desktop application based on \nSwing Application Framework
 Application.vendorId = Sun
-Application.id = ${Application.name}
+Application.id = SortingDemo
 Application.lookAndFeel = system
