About screen and some small changes

--- a/src/com/serb/sortingdemo/resources/SortingDemoAboutBox.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoAboutBox.properties
@@ -2,7 +2,7 @@ title = About: ${Application.title} ${Application.version}
 
 closeAboutBox.Action.text = &Close
 
-appDescLabel.text=<html>${Application.description}
+appDescLabel.text=<html>Java desktop application based on Swing Application Framework
 
 versionLabel.text=Product Version\:
 
@@ -12,3 +12,6 @@ homepageLabel.text=Homepage\:
 
 #NOI18N
 imageLabel.icon=about.png
+vendorNameLabel.text=Sergii Bezuglyi
+appHomePageLabel.text=<html> <a href="https://github.com/serbFantom/SortingDemo">https://github.com/serbFantom/SortingDemo</a> </html>
+appHomePageUri=https://github.com/serbFantom/SortingDemo
