--- a/src/com/serb/sortingdemo/resources/SortingDemoApp.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoApp.properties
@@ -1,10 +1,10 @@
 # Application global resources
 
 Application.name = SortingDemo
-Application.title = Sorting Application Example
-Application.version = 1.0
+Application.title = SortingDemo
+Application.version = 0.1
 Application.vendor =
-Application.homepage = http\://appframework.dev.java.net/
+Application.homepage=<html> <a href="https://github.com/serbFantom/SortingDemo">https://github.com/serbFantom/SortingDemo</a> </html>
 Application.description = A simple java desktop application based on \nSwing Application Framework
 Application.vendorId = Sun
 Application.id = SortingDemo
