--- a/src/com/serb/sortingdemo/resources/SortingDemoView.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoView.properties
@@ -1,7 +1,3 @@
-# Resources for the SortingDemoView class
-
-# top-level menus
-
 fileMenu.text = File
 helpMenu.text = Help
 
@@ -46,3 +42,4 @@ txtFileExtensionDescription = Text Files
 openFileChooser.dialogTitle = Open a Text File
 saveFileChooser.dialogTitle = Save a Text File
 fileToLoadSeparator = ,
+fileNameLabel.text=
