Added Bubble sort for tables, table random filling, log4j support

--- a/src/com/serb/sortingdemo/resources/SortingDemoView.properties
+++ b/src/com/serb/sortingdemo/resources/SortingDemoView.properties
@@ -30,7 +30,6 @@ doSort.Action.shortDescription=
 doSort.Action.text=
 buttonSort.toolTipText=Sort
 buttonSort.text=Sort
-Main.text=Sorting
 sortMenuItem.text=Sort
 loadFromFileMenuItem.text=Load from file
 loadFromFile.Action.shortDescription=
@@ -43,3 +42,7 @@ openFileChooser.dialogTitle = Open a Text File
 saveFileChooser.dialogTitle = Save a Text File
 fileToLoadSeparator = ,
 fileNameLabel.text=
+SortMenu.text=Sorting
+fillTableRandomMenuItem.text=Random Fill
+fillTableRandom.Action.shortDescription=
+fillTableRandom.Action.text=
