--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,2 +1,4 @@
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+libs.log4j.classpath=\
+    ${base}/log4j-1.2.16.jar
