--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${libs.log4j.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
