Fix config properties added libraries to build without NetBeans install

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/S.Bezuglyi/.netbeans/6.9/build.properties
+user.properties.file=nbproject/private/build.properties
+#user.properties.file=/home/S.Bezuglyi/.netbeans/6.9/build.properties
